--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "Derrick Lee Alla Hoang",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.16.4",
     "mysql": "^2.16.0"
   }
