--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "Derrick Lee Alla Hoang",
+  "author": "Derrick Lee Allan Hoang",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
